--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,18 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.filter{
+  color: black;
+  padding:8px 16px;
+  border: 1px solid black;
+  width: fit-content;
+  border-radius: 100px;
+  cursor: pointer;
+  text-transform: uppercase;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.filter-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.check{
+  color: white;
+  background-color: black;
 }
