--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+body{
+  padding: 20px;
+}
 .filter{
   color: black;
   padding:8px 16px;
@@ -11,6 +14,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  margin-top: 30px;
 }
 .check{
   color: white;
